fenrir-chart/templates/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenrir-frontend
spec:
  selector:
    matchLabels:
      app: fenrir-frontend
  template:
    metadata:
      labels:
        app: fenrir-frontend
    spec:
      containers:
        - name: fenrir-frontend
          image: docker.io/ajayshah369/fenrir-frontend:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: fenrir-frontend
spec:
  selector:
    app: fenrir-frontend
  ports:
    - port: 80
      targetPort: 9000
